# odoo-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
odoo_mcp/: __init__.py  client.py  server.py
