[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-mcp"
version = "0.1.0"
description = "Odoo 18 MCP Server — Full read/write access to Odoo 18 Accounting via JSON-RPC"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Claude", email = "noreply@anthropic.com"}]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp.server:main"
